--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
-    <artifactId>SpringBoot</artifactId>
+    <artifactId>FangYuanAndWanHe-Back</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>SpringBoot-web</name>
-    <description>SpringBoot</description>
+    <name>FangYuanAndWanHe-Back</name>
+    <description>FangYuanAndWanHe-Back</description>
     <properties>
         <java.version>17</java.version>
     </properties>
