--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@element-plus/icons-vue": "^2.1.0",
     "@vueuse/core": "^10.1.2",
     "axios": "^1.4.0",
+    "core-js": "^3.6.4",
     "element-plus": "^2.3.4",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
