--- a/src/main/resources/application-jdbc.yml
+++ b/src/main/resources/application-jdbc.yml
@@ -4,7 +4,7 @@ spring:
       driverClassName: com.mysql.cj.jdbc.Driver
       url: jdbc:mysql://8.130.22.229:13306/SpringBoot?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC&allowMultiQueries=true
       username: root
-      password: eYiwj9LHsg_j
+      password:
       #????????????????????????init????????getConnection?
       initialSize: 0
       #???????
